--- a/config_sample.env
+++ b/config_sample.env
@@ -8,7 +8,7 @@ TELEGRAM_HASH = ""
 BOT_TOKEN = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/NadifMasamba/CMT-Hero"
+UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
@@ -48,6 +48,7 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = ""
+LEECH_REMOVE_UNWANTED = ""
 DUMP_CHAT_ID = ""
 
 # qBittorrent/Aria2c
