--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp
 aiofiles
 aioshutil
-anytree
+anytree==2.8.0
 apscheduler
 aria2p
 asyncio
@@ -26,7 +26,7 @@ pillow
 psutil
 pybase64
 pymongo
-pyrogram==2.0.77
+pyrofork==2.2.10
 python-dotenv
 python-magic
 qbittorrent-api
