--- a/config_sample.env
+++ b/config_sample.env
@@ -8,7 +8,7 @@ TELEGRAM_HASH = ""
 BOT_TOKEN = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/NadifMasamba/CMT-Hero"
+UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
@@ -22,11 +22,14 @@ STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "120"
-UPTOBOX_TOKEN = ""
 EXTENSION_FILTER = "index html"
-FILELION_API = ""
 INCOMPLETE_TASK_NOTIFIER = "True"
 YT_DLP_OPTIONS = ""
+
+# Site Api
+FILELION_API = ""
+STREAMWISH_API = ""
+UPTOBOX_TOKEN = ""
 
 # GDrirve Tools
 GDRIVE_ID = ""
@@ -77,6 +80,7 @@ STORAGE_THRESHOLD = "1"
 TORRENT_LIMIT = ""
 DIRECT_LIMIT = ""
 YTDLP_LIMIT = ""
+PLAYLIST_LIMIT = ""
 GDRIVE_LIMIT = ""
 MEGA_LIMIT = ""
 LEECH_LIMIT = ""
