--- a/config_sample.env
+++ b/config_sample.env
@@ -8,8 +8,8 @@ TELEGRAM_HASH = ""
 BOT_TOKEN = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
-UPSTREAM_BRANCH = "main"
+UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = ""
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
@@ -21,7 +21,7 @@ SUDO_USERS = ""
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "120"
+AUTO_DELETE_MESSAGE_DURATION = "60"
 EXTENSION_FILTER = "index html"
 INCOMPLETE_TASK_NOTIFIER = "True"
 YT_DLP_OPTIONS = ""
@@ -29,7 +29,7 @@ YT_DLP_OPTIONS = ""
 # Site Api
 FILELION_API = ""
 STREAMWISH_API = ""
-UPTOBOX_TOKEN = ""
+JIODRIVE_ACCESS_TOKEN = ""
 
 # GDrirve Tools
 GDRIVE_ID = ""
@@ -57,7 +57,7 @@ DUMP_CHAT_ID = ""
 USER_DUMP = ""
 
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = "1800"
+TORRENT_TIMEOUT = "300"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
@@ -82,7 +82,7 @@ DIRECT_LIMIT = ""
 YTDLP_LIMIT = ""
 PLAYLIST_LIMIT = ""
 GDRIVE_LIMIT = ""
-MEGA_LIMIT = ""
+MEGA_LIMIT = "5"
 LEECH_LIMIT = ""
 CLONE_LIMIT = ""
 
@@ -93,7 +93,7 @@ REQUEST_LIMITS = "5"
 ENABLE_MESSAGE_FILTER = "False"
 STOP_DUPLICATE_TASKS = "True"
 DISABLE_DRIVE_LINK = "True"
-TOKEN_TIMEOUT = "1800"
+TOKEN_TIMEOUT = ""
 
 #Extras
 SET_COMMANDS = "True"
