--- a/config_sample.env
+++ b/config_sample.env
@@ -15,7 +15,7 @@ UPSTREAM_BRANCH = ""
 USER_SESSION_STRING = ""
 DATABASE_URL = ""
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
-CMD_SUFFIX = ""  
+CMD_SUFFIX = "z"  
 AUTHORIZED_CHATS = ""   
 SUDO_USERS = ""  
 STATUS_LIMIT = "5"
@@ -51,7 +51,7 @@ LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-LEECH_FILENAME_PREFIX = ""
+LEECH_FILENAME_PREFIX = "z"
 LEECH_REMOVE_UNWANTED = ""
 DUMP_CHAT_ID = ""
 USER_DUMP = ""
@@ -85,6 +85,7 @@ GDRIVE_LIMIT = ""
 MEGA_LIMIT = "5"
 LEECH_LIMIT = ""
 CLONE_LIMIT = ""
+RCLONE_LIMIT = ""
 
 #Group Features
 FSUB_IDS = ""
@@ -98,6 +99,9 @@ TOKEN_TIMEOUT = ""
 #Extras
 SET_COMMANDS = "True"
 DISABLE_LEECH = "False"
+DISABLE_BULK = "False"
+DISABLE_MULTI = "False"
+DISABLE_SEED = "False"
 DM_MODE = "all"
 DELETE_LINKS = "True"
 LOG_CHAT_ID = ""
