--- a/config_sample.env
+++ b/config_sample.env
@@ -1,11 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "6408829655"
+TELEGRAM_API = "26305721"
+TELEGRAM_HASH = "f7fabb6bb9951b499e66f7c44331011d"
+BOT_TOKEN = "6378855441:AAHvoorBawvzecV9oTcAtJqvoh2O85Kd4Z4"
 
 # Update
 UPSTREAM_REPO = ""
@@ -13,9 +10,9 @@ UPSTREAM_BRANCH = ""
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://mrnoobx:DAZCdTczVWyECi04@cluster0.sedgwxy.mongodb.net/?retryWrites=true&w=majority"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
-CMD_SUFFIX = "z"  
+CMD_SUFFIX = ""  
 AUTHORIZED_CHATS = ""   
 SUDO_USERS = ""  
 STATUS_LIMIT = "5"
